2004/08/25
	add
	1. shortcut to submenus
	2. UI font takes global antialias setting
	3. save QFileDialog path
	4. clear zmodemDialog before shown
	
2004/08/24
	0.3.8 released
	fix
	1. change debian/rules in favor of new guide
	remove 
	1. conditional compilation in QTermWndMgr & QTermScreen::focusInEvent

2004/08/23
	add
	1. proxy support for SSH1
	2. use external image viewer program if specified
	remove
	1. qterm.cfg version warning
	fix
	1. polish the http download behavior
	
2004/08/13
	add
	1. context menu in picture viewer
	fix
	1. bug when setting up zmodem directory
	
2004/08/12
	add
	1. picture viewer
	2. http download
	0.3.7 released

2004/07/27
	add
	1. zmodem upload/download support
	2. allow URL(%L) to be used as parameter in browser 
	setting in prefdialog
	3. support on-the-spot style
	fix
	1. window switching problem in MacOSX
	2. path setting in Linux(*NIX), Windowz and MacOSX
	
2004/06/10
	add
	1. paste from clipboard by menu command, shift+insert, 
	while paste from mouse selection by clicking mouse middle
	button
	fix
	1. input method not working in qt3.2 for Windowz

2004/06/07
	add
	1. better support for dock in MacOSX

2004/05/14
	fix
	1. crash when exception popups in script
	
2004/05/12
	fix
	1. dividend of 0 in popwidget.cpp
	2. empty schema crash
	3. new implementation of QTermConfig by cppgx.bbs@smth.org,
	fixing the memory leak.
	4. various conditional compiling for MacOSX
	
2004/02/19
	add
	1. SSH1 support
	fix
	1. better look of tray icon
	2. hide the window only when tray icon is enabled
	3. close qterm when there is no connection.

2003/11/09
	fix
	1. support for redhat's menu.
	2. some anony bug when move around the cursor
	3. fatal error when no schema selected
	4. save schema error in Windowz

2003/11/08
	add
	1. disable python when no python-dev detected
	2. qterm.pro for qmake use
	fix
	1. merge patch for BSD system
	2. one bug in QTermTextLine::getText
	
2003/11/07
	add
	1. schema support

2003/10/19
	fix