@@ -1,3 +1,8 @@
+2004/08/31
+	add
+	1. partial support for *[?1001 
+	2. telnet NAWS option
+
 2004/08/25
 	add
 	1. shortcut to submenus
